--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,42 +1,44 @@
 <footer class="d-flex flex-shrink-1 justify-content-center col-sm-12 mt-5 footer">
-    <div class="d-flex flex-wrap justify-content-between col-lg-7 col-md-10 col-sm-12 mt-3">
-        <section>
-            <h4>Kontakt</h4>
-            <p>ATV Haltern von 1882 e.V.</p>
-            <p>
-                <span>Lippspieker 25</span><br>
-                <span>45721 Haltern am See</span><br>
-                <span>Tel. 02364 - 9496418</span><br>
-                <a href="www.atv-haltern.de">www.atv-haltern.de</a><br>
-                <a href="mailto:verein@atv-haltern.de">verein@atv-haltern.de</a>
-            </p>
-        </section>
-        <section>
-            <h4>Abteilungen</h4>
-            <p>
-                <a href="http://atv-haltern.de/sportabteilungen/badminton/home/">Badminton</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/basketball/home/">Basketball</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/fitness-reha/fitness-und-gesundheitssport/">Fitness
-                    / Reha</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/indiaca/home/">Indiaca</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/kinderbereich/">Kinderbereich</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/radsport/news/">Radsport</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/trampolin/">Trampolin</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/turnen/home/">Turnen</a><br>
-                <a href="http://atv-haltern.de/sportabteilungen/volleyball/home/">Volleyball</a><br>
-            </p>
-        </section>
-        <section>
-            <h4>Stauseepokal</h4>
-            <p>
-                <a
-                    href="https://atv-haltern.de/sportabteilungen/badminton/home/einzelne-nachricht/news/fazit-stauseepokal-2019/?tx_news_pi1[controller]=News&tx_news_pi1[action]=detail&cHash=b41458d2c8626adbc8cf709e0ff5f14f">Stauseepokal
-                    2019</a></p>
-            <p>
-                <span>Dreifachturnhalle am Schulzentrum</span><br>
-                <span> Holtwicker Str. 3</span><br>
-                <span>45721 Haltern am See</span><br>
-            </p>
-        </section>
-    </div>
+  <div class="d-flex flex-wrap justify-content-between col-lg-7 col-md-10 col-sm-12 mt-3">
+    <section>
+      <h4>Kontakt</h4>
+      <p>ATV Haltern von 1882 e.V.</p>
+      <p>
+        <span>Lippspieker 25</span><br>
+        <span>45721 Haltern am See</span><br>
+        <span>Tel. 02364 - 9496418</span><br>
+        <a href="www.atv-haltern.de">www.atv-haltern.de</a><br>
+        <a href="mailto:verein@atv-haltern.de">verein@atv-haltern.de</a>
+      </p>
+    </section>
+    <section>
+      <h4>Abteilungen</h4>
+      <p>
+        <a href="http://atv-haltern.de/sportabteilungen/badminton/home/">Badminton</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/basketball/home/">Basketball</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/fitness-reha/fitness-und-gesundheitssport/">Fitness
+          / Reha</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/indiaca/home/">Indiaca</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/kinderbereich/">Kinderbereich</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/radsport/news/">Radsport</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/trampolin/">Trampolin</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/turnen/home/">Turnen</a><br>
+        <a href="http://atv-haltern.de/sportabteilungen/volleyball/home/">Volleyball</a><br>
+      </p>
+    </section>
+    <section>
+      <h4>Stauseepokal</h4>
+      <p>
+        <a href="https://atv-haltern.de/sportabteilungen/badminton/stauseepokal/stauseepokal-2020/">
+          Stauseepokal 2020</a></p>
+      <p>
+        <span>Dreifachturnhalle am Schulzentrum</span><br>
+        <span> Holtwicker Str. 3</span><br>
+        <span>45721 Haltern am See</span><br>
+      </p>
+      <p>
+        <span>Probleme oder Fragen? <a href="mailto:janbreitkreutz1970@gmail.com">Schreib uns!</a></span>
+      </p>
+    </section>
+  </div>
 </footer>
