--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="/participants" (click)="isCollapsed = true">Teilnehmerlisten</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/registration" (click)="isCollapsed = true">An-/Abmeldung</a>
+        <a class="nav-link" routerLink="/registration" (click)="isCollapsed = true">Anmeldung</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/status" (click)="isCollapsed = true">Status</a>
