--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -18,13 +18,13 @@
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <div class="form-group">
           <label class="username-label" for="email">E-Mail</label>
-          <input type="text" class="form-control" name="email" id="email" placeholder="max.mustermann@example.com"
+          <input type="text" class="form-control" name="email" id="email" placeholder="Deine E-Mail-Adresse"
                  formControlName="email" #email>
         </div>
 
         <div class="form-group">
           <label for="password">Passwort</label>
-          <input type="password" class="form-control" name="password" id="password" placeholder="*******"
+          <input type="password" class="form-control" name="password" id="password" placeholder="Dein Passwort"
                  formControlName="password">
         </div>
 
