--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -26,12 +26,12 @@
   </div>
 </form>
 <hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap">
-  <div class="d-flex flex-column m-3">
+<div class="d-flex flex-wrap w-100-sm">
+  <div class="d-flex flex-column mr-1 w-100-sm">
     <h5>Starterliste</h5>
     <app-table [headers]="singleHeaders" [items]="singleStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3" *ngIf="singleWaiting.length">
+  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="singleWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="singleHeaders" [items]="singleWaiting"></app-table>
   </div>
@@ -62,12 +62,12 @@
   </div>
 </form>
 <hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap">
-  <div class="d-flex flex-column m-3">
+<div class="d-flex flex-wrap w-100-sm">
+  <div class="d-flex flex-column mr-1 w-100-sm">
     <h5>Starterliste</h5>
     <app-table [headers]="doubleHeaders" [items]="doubleStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3" *ngIf="doubleWaiting.length">
+  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="doubleWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="doubleHeaders" [items]="doubleWaiting"></app-table>
   </div>
@@ -84,12 +84,12 @@
   </div>
 </form>
 <hr align="left" class="w-25"/>
-<div class="d-flex flex-wrap">
-  <div class="d-flex flex-column m-3">
+<div class="d-flex flex-wrap w-100-sm">
+  <div class="d-flex flex-column mr-1 w-100-sm">
     <h5>Starterliste</h5>
     <app-table [headers]="mixedHeaders" [items]="mixedStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3" *ngIf="mixedWaiting.length">
+  <div class="d-flex flex-column ml-1 w-100-sm" *ngIf="mixedWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="mixedHeaders" [items]="mixedWaiting"></app-table>
   </div>
