--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -19,7 +19,7 @@
         <div class="form-group">
           <label class="username-label" for="email">E-Mail</label>
           <input type="text" class="form-control" name="email" id="email" placeholder="Deine E-Mail-Adresse"
-                 formControlName="email" #email>
+                 formControlName="email" ngbAutoFocus>
         </div>
 
         <div class="form-group">
