Auto trim input fields

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -14,7 +14,7 @@
   <div class="form-group">
     <label class="form-control-label" for="first">Vorname</label>
     <input type="text" class="form-control" id="first" name="first" placeholder="Dein Vorname"
-           formControlName="first" #first>
+           formControlName="first" #first trim="blur">
     <div
       *ngIf="registerForm.get('first')!.invalid && (registerForm.get('first')!.dirty || registerForm.get('first')!.touched)">
       <small class="form-text text-danger" *ngIf="registerForm.get('first')?.errors?.required">
@@ -36,7 +36,7 @@
   <div class="form-group">
     <label class="form-control-label" for="last">Nachname</label>
     <input type="text" class="form-control" id="last" name="last" placeholder="Dein Nachname"
-           formControlName="last" #last>
+           formControlName="last" #last trim="blur">
     <div
       *ngIf="registerForm.get('last')!.invalid && (registerForm.get('last')!.dirty || registerForm.get('last')!.touched)">
       <small class="form-text text-danger" *ngIf="registerForm.get('last')?.errors?.required">
@@ -74,7 +74,7 @@
   <div class="form-group">
     <label class="form-control-label" for="club">Verein</label>
     <input type="text" class="form-control" id="club" name="club" placeholder="Dein Verein"
-           formControlName="club" #club>
+           formControlName="club" #club trim="blur">
     <div
       *ngIf="registerForm.get('club')!.invalid && (registerForm.get('club')!.dirty || registerForm.get('club')!.touched)">
       <small class="form-text text-danger" *ngIf="registerForm.get('club')?.errors?.required">
@@ -98,7 +98,7 @@
     <label class="form-control-label" for="email">E-Mail</label>
     <input type="email" class="form-control" id="email" name="email"
            placeholder="Deine E-Mail-Adresse"
-           formControlName="email">
+           formControlName="email" (change)="trimEmail()">
 
     <div
       *ngIf="registerForm.get('email')!.invalid && (registerForm.get('email')!.dirty || registerForm.get('email')!.touched)">
