--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -18,8 +18,8 @@
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <div class="form-group">
           <label class="username-label" for="email">E-Mail</label>
-          <input type="text" class="form-control" name="email" id="email" placeholder="Deine E-Mail-Adresse"
-                 formControlName="email" ngbAutoFocus trim="blur">
+          <input type="email" class="form-control" name="email" id="email" placeholder="Deine E-Mail-Adresse"
+                 formControlName="email" ngbAutoFocus (input)="trimEmail()">
         </div>
 
         <div class="form-group">
