Change type to text

--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -96,9 +96,9 @@
 
   <div class="form-group">
     <label class="form-control-label" for="email">E-Mail</label>
-    <input type="email" class="form-control" id="email" name="email"
+    <input type="text" class="form-control" id="email" name="email"
            placeholder="Deine E-Mail-Adresse"
-           formControlName="email" (input)="trimEmail()">
+           formControlName="email" trim>
 
     <div
       *ngIf="registerForm.get('email')!.invalid && (registerForm.get('email')!.dirty || registerForm.get('email')!.touched)">
